# home-automation

./: README.md
Arduino/: arduino setup.odt
Arduino/compare_strings/: compare_strings.ino
Arduino/deep_sleep(action-sleep-action-sleep)/deep_sleep/: deep_sleep.ino
Arduino/eeprom/: eeprom.ino
Arduino/func/: func.ino
Arduino/interupt/: interupt.ino
Arduino/iot/connect_TO_network/: connect_network.ino
Arduino/iot/mqtt_pub/: mqtt_pub.ino
Arduino/iot/mqtt_sub/: mqtt_sub.ino
Arduino/iot/project_mqtt/: project_mqtt.ino
Arduino/iot/server_with_access_point(server only woks when connected to wifi)/: server_with_access_point.ino
Arduino/iot/static_IP_HOSTNAME/: static_IP_HOSTNAME.ino
Arduino/iot/web_server/: web_server.ino
Arduino/led_blik/: led_blik.ino
Arduino/pwm/: pwm.ino
Arduino/strings/: strings.ino
esp8266_with_chatbot/4)connecting_server_with_dialogflow/: index.js  package-lock.json  package.json
esp8266_with_chatbot/esp8266 code/pub_sub/: pub_sub.ino
mqtt-broker/javascript/: broker.js  mqtt_pub.js  mqtt_sub.js  note.txt  package-lock.json  package.json
mqtt-broker/python/: broker.py  pub.py  sub.py
raspberry pi/4)connecting_server_with_dialogflow/: index.js  notes.txt  package-lock.json  package.json
raspberry pi/home/: Cargo.toml  Rocket.toml
raspberry pi/home-with-database/: Cargo.toml  Rocket.toml
raspberry pi/home-with-database/src/: main.rs  mongo.rs
raspberry pi/home-with-database/templates/: home.tera  index.html  switch1.hbs
raspberry pi/home/src/: main.rs
raspberry pi/home/templates/: home.tera  switch1.hbs
(+2 files in other folders)
