[package]
name = "home"
version = "0.1.0"
authors = ["faizsarwar <faizsarwar44@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_gpiozero = "0.2.0"
rocket = "0.4.7"
serde = { version = "1.0", features = ["derive"] }
rppal = "0.11.3"


[dependencies.rocket_contrib]
version = "0.4.5"
features = ["handlebars_templates", "tera_templates"]

